--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,90 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.signin {
+  max-width: 380px;
+  padding: 15px 35px 45px;
+  margin: 0 auto;
+  background-color: #fff;
+  border: 1px solid rgba(0,0,0,0.1); 
+}
+.wrapper {	
+    background: #50a3a2;
+  background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+    
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 400px;
+    margin-top: -200px;
+    overflow: hidden;
+    
+}
+.form-control {
+  position: relative;
+  font-size: 16px;
+  height: auto;
+  padding: 20px;
+  box-sizing:border-box;
+
+}
+.btn {
+  background-color: #ddd;
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition: 0.3s;
+  position: relative;
+}
+
+.btn:hover {
+  background-color: #b4bbb4;
+  color: white;
+}
+.login-header {
+  color: black;
+  text-align:left;
+  font-size:200%;
+}
+.login {
+  color: rgb(20, 20, 20);
+  width: 6em;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: 100;
+  font-size: 1.75em;
+  border: 1px solid rgba(255, 255, 255, .75);
+  background: lightgrey;
+  transition: all 200ms ease-in;
+  border-radius: .65em;
+}
+  .login:hover {
+    background-color: rgb(18, 179, 152);
+    color: black;
+    border: none;
+
+}
+
+.signup {
+  color: rgb(20, 20, 20);
+  width: 6em;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: 100;
+  font-size: 1em;
+  border: 1px solid rgba(255, 255, 255, .75);
+  background: lightgrey;
+  transition: all 200ms ease-in;
+  border-radius: .65em;
+}
+
+.signup:hover {
+  background-color: rgb(18, 179, 152);
+  color: black;
+  border: none;
+}
