--- a/src/index.css
+++ b/src/index.css
@@ -135,3 +135,20 @@ code {
   background-color:  rgb(18, 179, 152);
   color: rgb(252, 240, 240);
 }
+.notification {
+  color: rgb(20, 20, 20);
+  width: 6em;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: 100;
+  font-size: 1.75em;
+  border: 1px solid rgba(255, 255, 255, .75);
+  background: lightgrey;
+  transition: all 200ms ease-in;
+  border-radius: .65em;
+}
+  .notification:hover {
+    background-color: rgb(18, 179, 152);
+    color: black;
+    border: none;
+
+}
