--- a/src/components/Forum/Compose/Post/Post.css
+++ b/src/components/Forum/Compose/Post/Post.css
@@ -93,3 +93,13 @@
     margin-right: 10px;
     cursor: pointer;
   }
+
+  .icons{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: flex-end;
+    align-content: flex-end;
+    width: 15%;
+  }
