--- a/src/components/Forum/Compose/Post/Comment/CommentBox.css
+++ b/src/components/Forum/Compose/Post/Comment/CommentBox.css
@@ -4,6 +4,57 @@
     border-radius: 5px;
     border: 1px solid #2aabe2;
     padding: 8px;
-    width: 100%;
+    width: 100vw;
     outline: none;
+  }
+
+  .Submit_button {
+    color: rgb(20, 20, 20);
+    width: 6em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: 100;
+    font-size: 1em;
+    border: 1px solid rgba(255, 255, 255, .75);
+    background: lightgrey;
+    transition: all 200ms ease-in;
+    border-radius: .65em;
+  }
+    .Submit_button:hover {
+      background-color: rgb(18, 179, 152);
+      color: black;
+      border: none;
+  
+  }
+  .Comment_input {
+    border-radius: 5px;
+    border: 1px solid #2aabe2;
+    padding: 8px;
+    width: 80vw;
+    outline: none;
+  } 
+
+  .Comment_header {
+    width: 100%;
+    min-width: 1000px;
+    min-height: 100vh;
+    background-image: linear-gradient(to right top, #6bd187, #5bc685, #4bbb84, #3cb081, #2da57e, #2ba47c, #29a37a, #27a278, #35ab76, #44b372, #54bb6e, #65c369);;
+  }
+  .Comment__content {
+    width: 1000px;
+    margin: 0 auto;
+    min-height: calc( 100vh - 50px );
+    box-sizing: border-box;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  .Post__profile-picture {
+    border: 1px solid #2aabe2;
+    display: flex;
+    border-radius: 50%;
+    height: 25px;
+    width: 25px;
+    justify-content: center;
+    align-items: center;
+    margin-right: 5px;
   }
