--- a/src/components/Forum/Compose/Post/Comment/CommentBox.css
+++ b/src/components/Forum/Compose/Post/Comment/CommentBox.css
@@ -14,7 +14,6 @@
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 100;
     font-size: 1em;
-    border: 1px solid rgba(255, 255, 255, .75);
     background: lightgrey;
     transition: all 200ms ease-in;
     border-radius: .65em;
@@ -25,7 +24,22 @@
       border: none;
   
   }
-
+  .Comment_input {
+    border-radius: 5px;
+    padding: 8px;
+    width: 80vw;
+    height: 6vh;
+    outline: none;
+    border: 5px solid rgb(18, 179, 152);
+    margin-right: 15px;
+   padding-top: 15px;
+   font-family: Arial;
+   font-size: 28px;
+   line-height: 1.5;
+   color: #797979;
+   font-display: fallback;
+   
+  } 
 
   .Comment_header {
     width: 100%;
@@ -51,4 +65,34 @@
     justify-content: center;
     align-items: center;
     margin-right: 5px;
+  }
+  .dialogBox {
+    position: relative;
+    max-width: 100vw;
+    height: auto;
+    margin: 20px 20px;
+    padding: 10px;
+    background-image: linear-gradient(to right top, #6bd187, #5bc685, #4bbb84, #3cb081, #2da57e, #2ba47c, #29a37a, #27a278, #35ab76, #44b372, #54bb6e, #65c369);
+    border-radius: 5px;
+    border: 5px solid rgb(18, 179, 152);
+  }
+  .dialogMessage {
+    min-height: 30px;
+    border-radius: 3px;
+    font-family: Arial;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #797979;
+  }
+  .tip {
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    background: transparent;
+    border: 10px solid #ccc;
+     top: 10px;
+    left: -25px;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-bottom-color: transparent;  
   }
