--- a/src/components/Forum/Compose/Compose.css
+++ b/src/components/Forum/Compose/Compose.css
@@ -52,12 +52,24 @@
   }
   
   .Compose__bottom button {
-    color: #FFF;
-    background-color: #2596ca;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 16px;
+    color: rgb(20, 20, 20);
+    width: 8em;
+    height: 2.5em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: 100;
+    font-size: 1em;
+    border: 1px solid rgba(255, 255, 255, .75);
+    background: lightgrey;
+    transition: all 200ms ease-in;
+    border-radius: .65em;
   }
+    .Compose_bottom:hover {
+      background-color: rgb(18, 179, 152);
+      color: black;
+      border: none;
+  
+  }
+  
 
   .Compose_button {
     color: rgb(20, 20, 20);
