--- a/src/components/Forum/Compose/Post/Comment/CommentBox.css
+++ b/src/components/Forum/Compose/Post/Comment/CommentBox.css
@@ -27,8 +27,8 @@
   .Comment_input {
     border-radius: 5px;
     padding: 8px;
-    width: 80vw;
-    height: 6vh;
+    width: 85vw;
+    height: 5vh;
     outline: none;
     border: 5px solid rgb(18, 179, 152);
     margin-right: 15px;
@@ -55,6 +55,8 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
   }
   .Post__profile-picture {
     border: 1px solid #2aabe2;
@@ -81,7 +83,7 @@
     border-radius: 3px;
     font-family: Arial;
     font-size: 14px;
-    line-height: 1.5;
+    line-height: 3.5;
     color: #797979;
   }
   .tip {
@@ -95,4 +97,16 @@
     border-top-color: transparent;
     border-left-color: transparent;
     border-bottom-color: transparent;  
+  }
+  .comments {
+    position: relative;
+    max-width: 100vw;
+    height: auto;
+    margin: 20px 20px;
+    padding: 10px;
+    background-image: linear-gradient(to right top, #6bd187, #5bc685, #4bbb84, #3cb081, #2da57e, #2ba47c, #29a37a, #27a278, #35ab76, #44b372, #54bb6e, #65c369);
+    border-radius: 5px;
+    border: 5px solid rgb(18, 179, 152);
+    font-size: 14px;
+    line-height: 5;
   }
