--- a/src/components/Forum/Compose/Post/Comment/CommentBox.css
+++ b/src/components/Forum/Compose/Post/Comment/CommentBox.css
@@ -1,112 +1,141 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 .Comment_input {
-    border-radius: 5px;
-    border: 1px solid #2aabe2;
-    padding: 8px;
-    width: 100vw;
-    outline: none;
-  }
+  border-radius: 5px;
+  border: 1px solid #2aabe2;
+  padding: 8px;
+  width: 100vw;
+  outline: none;
+}
 
-  .Submit_button {
-    color: rgb(20, 20, 20);
-    width: 6em;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: 100;
-    font-size: 1em;
-    background: lightgrey;
-    transition: all 200ms ease-in;
-    border-radius: .65em;
-  }
-    .Submit_button:hover {
-      background-color: rgb(18, 179, 152);
-      color: black;
-      border: none;
-  
-  }
-  .Comment_input {
-    border-radius: 5px;
-    padding: 8px;
-    width: 85vw;
-    height: 5vh;
-    outline: none;
-    border: 5px solid rgb(18, 179, 152);
-    margin-right: 15px;
-   padding-top: 15px;
-   font-family: Arial;
-   font-size: 28px;
-   line-height: 1.5;
-   color: #797979;
-   font-display: fallback;
-   
-  } 
+.Submit_button {
+  color: rgb(20, 20, 20);
+  width: 6em;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: 100;
+  font-size: 1em;
+  background: lightgrey;
+  transition: all 200ms ease-in;
+  border-radius: 0.65em;
+}
+.Submit_button:hover {
+  background-color: rgb(18, 179, 152);
+  color: black;
+  border: none;
+}
+.Comment_input {
+  border-radius: 5px;
+  padding: 8px;
+  width: 85vw;
+  height: 5vh;
+  outline: none;
+  border: 5px solid rgb(18, 179, 152);
+  margin-right: 15px;
+  padding-top: 15px;
+  font-family: Arial;
+  font-size: 28px;
+  line-height: 1.5;
+  color: #797979;
+  font-display: fallback;
+}
 
-  .Comment_header {
-    width: 100%;
-    min-width: 1000px;
-    min-height: 100vh;
-    background-image: linear-gradient(to right top, #6bd187, #5bc685, #4bbb84, #3cb081, #2da57e, #2ba47c, #29a37a, #27a278, #35ab76, #44b372, #54bb6e, #65c369);;
-  }
-  .Comment__content {
-    width: 1000px;
-    margin: 0 auto;
-    min-height: calc( 100vh - 50px );
-    box-sizing: border-box;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: bold;
-  }
-  .Post__profile-picture {
-    border: 1px solid #2aabe2;
-    display: flex;
-    border-radius: 50%;
-    height: 25px;
-    width: 25px;
-    justify-content: center;
-    align-items: center;
-    margin-right: 5px;
-  }
-  .dialogBox {
-    position: relative;
-    max-width: 100vw;
-    height: auto;
-    margin: 20px 20px;
-    padding: 10px;
-    background-image: linear-gradient(to right top, #6bd187, #5bc685, #4bbb84, #3cb081, #2da57e, #2ba47c, #29a37a, #27a278, #35ab76, #44b372, #54bb6e, #65c369);
-    border-radius: 5px;
-    border: 5px solid rgb(18, 179, 152);
-  }
-  .dialogMessage {
-    min-height: 30px;
-    border-radius: 3px;
-    font-family: Arial;
-    font-size: 14px;
-    line-height: 3.5;
-    color: #797979;
-  }
-  .tip {
-    width: 0px;
-    height: 0px;
-    position: absolute;
-    background: transparent;
-    border: 10px solid #ccc;
-     top: 10px;
-    left: -25px;
-    border-top-color: transparent;
-    border-left-color: transparent;
-    border-bottom-color: transparent;  
-  }
-  .comments {
-    position: relative;
-    max-width: 100vw;
-    height: auto;
-    margin: 20px 20px;
-    padding: 10px;
-    background-image: linear-gradient(to right top, #6bd187, #5bc685, #4bbb84, #3cb081, #2da57e, #2ba47c, #29a37a, #27a278, #35ab76, #44b372, #54bb6e, #65c369);
-    border-radius: 5px;
-    border: 5px solid rgb(18, 179, 152);
-    font-size: 14px;
-    line-height: 5;
-  }
+.Comment_header {
+  width: 100%;
+  min-width: 1000px;
+  min-height: 100vh;
+  background-image: linear-gradient(
+    to right top,
+    #6bd187,
+    #5bc685,
+    #4bbb84,
+    #3cb081,
+    #2da57e,
+    #2ba47c,
+    #29a37a,
+    #27a278,
+    #35ab76,
+    #44b372,
+    #54bb6e,
+    #65c369
+  );
+}
+.Comment__content {
+  width: 1000px;
+  margin: 0 auto;
+  min-height: calc(100vh - 50px);
+  box-sizing: border-box;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: bold;
+}
+.Post__profile-picture {
+  border: 1px solid #2aabe2;
+  display: flex;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  justify-content: center;
+  align-items: center;
+  margin-right: 5px;
+}
+.dialogBox {
+  position: relative;
+  max-width: 100vw;
+  height: auto;
+  margin: 20px 20px;
+  padding: 10px;
+  background-image: linear-gradient(
+    to right top,
+    #6bd187,
+    #5bc685,
+    #4bbb84,
+    #3cb081,
+    #2da57e,
+    #2ba47c,
+    #29a37a,
+    #27a278,
+    #35ab76,
+    #44b372,
+    #54bb6e,
+    #65c369
+  );
+  border-radius: 5px;
+  border: 5px solid rgb(18, 179, 152);
+}
+.dialogMessage {
+  min-height: 30px;
+  border-radius: 3px;
+  font-family: Arial;
+  font-size: 14px;
+  line-height: 3.5;
+  color: #797979;
+}
+
+.comments {
+  position: relative;
+  max-width: 100vw;
+  height: auto;
+  margin: 20px 20px;
+  padding: 10px;
+  background-image: linear-gradient(
+    to right top,
+    #6bd187,
+    #5bc685,
+    #4bbb84,
+    #3cb081,
+    #2da57e,
+    #2ba47c,
+    #29a37a,
+    #27a278,
+    #35ab76,
+    #44b372,
+    #54bb6e,
+    #65c369
+  );
+  border-radius: 5px;
+  border: 5px solid rgb(18, 179, 152);
+  font-size: 14px;
+  line-height: 5;
+}
