--- a/src/components/Forum/Compose/Post/Post.css
+++ b/src/components/Forum/Compose/Post/Post.css
@@ -1,125 +1,140 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 .Post__parent {
-    width: 100%;
-    min-height: 150px;
-    background-color: #FFF;
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 0 2px 0 rgba(0, 0, 0, 0.14);
-    border-radius: 5px;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    padding: 10px 20px;
-    box-sizing: border-box;
-    position: relative;
-  }
-  
-  .Post__master-controls {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  .Post__master-controls:hover {
-    background-color: rgb(18, 179, 152);
-    color: black;
-    border: none;
-
+  width: 100%;
+  min-height: 150px;
+  background-color: #fff;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.12),
+    0 0 2px 0 rgba(0, 0, 0, 0.14);
+  border-radius: 5px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  position: relative;
 }
-  
-  .Post__master-menu {
-    display: none;
-    position: absolute;
-    width: 100px;
-    right: -105px;
-    background-color: #FFF;
-    flex-direction: column;
-    padding: 10px 10px 0px 10px;
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 0 2px 0 rgba(0, 0, 0, 0.14);
-  }
-  
-  .Post__master-menu span {
-    margin-bottom: 10px;
-    user-select: none;
-  }
-  
-  .Post__master-menu span:hover {
-    color: #2aabe2;
-  }
-  
-  .Post__meta-data {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .Post__profile-picture {
-    border: 1px solid #2aabe2;
-    display: flex;
-    border-radius: 50%;
-    height: 25px;
-    width: 25px;
-    justify-content: center;
-    align-items: center;
-    margin-right: 5px;
-  }
-  
-  .Post__name {
-    font-weight: 600;
-    font-size: 20px;
-    margin-right: 5px;
-  }
-  
-  .Post__handle {
-    font-size: 13px;
-    margin-right: 5px;
-  }
-  
-  .Post__date {
-    font-size: 13px;
-  }
-  
-  .Post__content {
-    width: 100%;
-    min-height: 50px;
-    box-sizing: border-box;
-    padding: 10px;
-  }
-  
-  .Post__user-controls {
-    width: 100%;
-    min-height: 50px;
-    box-sizing: border-box;
-    padding: 10px;
-    font-size: 25px;
-    position: relative;
-  }
-  
-  .Post__control-icon {
-    margin-right: 10px;
-    cursor: pointer;
-  }
 
-  .icons{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    align-items: flex-end;
-    align-content: flex-end;
-    width: 15%;
-  }
-  .commentButton {
-   align-items: right;
-  }
+.Post__master-controls {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  font-size: 20px;
+  cursor: pointer;
+}
+.Post__master-controls:hover {
+  background-color: rgb(18, 179, 152);
+  color: black;
+  border: none;
+}
 
-  .dialogBox {
-    position: relative;
-    max-width: 100vw;
-    height: auto;
-    margin: 20px 10px;
-    padding: 5px;
-    background-image: linear-gradient(to right top, #6bd187, #5bc685, #4bbb84, #3cb081, #2da57e, #2ba47c, #29a37a, #27a278, #35ab76, #44b372, #54bb6e, #65c369);
-    border-radius: 3px;
-    border: 5px solid rgb(18, 179, 152);;
-  }
+.Post__master-menu {
+  display: none;
+  position: absolute;
+  width: 100px;
+  right: -105px;
+  background-color: #fff;
+  flex-direction: column;
+  padding: 10px 10px 0px 10px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.12),
+    0 0 2px 0 rgba(0, 0, 0, 0.14);
+}
+
+.Post__master-menu span {
+  margin-bottom: 10px;
+  user-select: none;
+}
+
+.Post__master-menu span:hover {
+  color: #2aabe2;
+}
+
+.Post__meta-data {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.Post__profile-picture {
+  border: 1px solid #2aabe2;
+  display: flex;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  justify-content: center;
+  align-items: center;
+  margin-right: 5px;
+}
+
+.Post__name {
+  font-weight: 600;
+  font-size: 20px;
+  margin-right: 5px;
+}
+
+.Post__handle {
+  font-size: 13px;
+  margin-right: 5px;
+}
+
+.Post__date {
+  font-size: 13px;
+}
+
+.Post__content {
+  width: 100%;
+  min-height: 50px;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.Post__user-controls {
+  width: 100%;
+  min-height: 50px;
+  box-sizing: border-box;
+  padding: 10px;
+  font-size: 25px;
+  position: relative;
+}
+
+.Post__control-icon {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: flex-end;
+  align-content: flex-end;
+  width: 15%;
+}
+.commentButton {
+  align-items: right;
+}
+
+.dialogBox {
+  position: relative;
+  max-width: 100vw;
+  height: auto;
+  margin: 20px 10px;
+  padding: 5px;
+  background-image: linear-gradient(
+    to right top,
+    #6bd187,
+    #5bc685,
+    #4bbb84,
+    #3cb081,
+    #2da57e,
+    #2ba47c,
+    #29a37a,
+    #27a278,
+    #35ab76,
+    #44b372,
+    #54bb6e,
+    #65c369
+  );
+  border-radius: 3px;
+  border: 5px solid rgb(18, 179, 152);
+}
