--- a/src/components/Forum/Search/Search.css
+++ b/src/components/Forum/Search/Search.css
@@ -1,27 +1,27 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 .Search__parent {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    margin: 0px 10px;
-  }
-  
-  .Search__parent input {
-    border-radius: 21px;
-    border: 1px solid #2aabe2;
-    outline: none;
-    padding: 9px 34px 8px 12px;
-    font-size: 12px;
-  }
-  
-  .Search__content {
-    position: relative;
-  }
-  
-  #Search__icon {
-    font-size: 20px;
-    position: absolute;
-    top: 6px;
-    right: 12px;
-    cursor: pointer;
-  }
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin: 0px 10px;
+}
+
+.Search__parent input {
+  border-radius: 21px;
+  border: 1px solid #2aabe2;
+  outline: none;
+  padding: 9px 34px 8px 12px;
+  font-size: 12px;
+}
+
+.Search__content {
+  position: relative;
+}
+
+#Search__icon {
+  font-size: 20px;
+  position: absolute;
+  top: 6px;
+  right: 12px;
+  cursor: pointer;
+}
