--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   padding: 0;
@@ -18,37 +17,35 @@ code {
   padding: 25px 55px 55px;
   margin: 0 auto;
   background-color: #fff;
-  border: 1px solid rgba(0,0,0,0.1); 
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .background {
   background-color: #d9e4f5;
   background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
 }
-.wrapper {	
-    background: #50a3a2;
+.wrapper {
+  background: #50a3a2;
   background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
   border-color: black;
-    
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 400px;
-    margin-top: -200px;
-    overflow: hidden;
-    
+
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 400px;
+  margin-top: -200px;
+  overflow: hidden;
 }
 .form-control {
   position: relative;
   font-size: 16px;
   height: auto;
   padding: 20px;
-  box-sizing:border-box;
+  box-sizing: border-box;
   border-color: darkolivegreen;
-
 }
 .btn {
   background-color: #ddd;
@@ -68,37 +65,36 @@ code {
 }
 .login-header {
   color: black;
-  text-align:left;
-  font-size:200%;
+  text-align: left;
+  font-size: 200%;
 }
 .login {
   color: rgb(20, 20, 20);
   width: 6em;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-weight: 100;
   font-size: 1.75em;
-  border: 1px solid rgba(255, 255, 255, .75);
+  border: 1px solid rgba(255, 255, 255, 0.75);
   background: lightgrey;
   transition: all 200ms ease-in;
-  border-radius: .65em;
+  border-radius: 0.65em;
 }
-  .login:hover {
-    background-color: rgb(18, 179, 152);
-    color: black;
-    border: none;
-
+.login:hover {
+  background-color: rgb(18, 179, 152);
+  color: black;
+  border: none;
 }
 
 .signup {
   color: rgb(20, 20, 20);
   width: 6em;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-weight: 100;
   font-size: 1em;
-  border: 1px solid rgba(255, 255, 255, .75);
+  border: 1px solid rgba(255, 255, 255, 0.75);
   background: lightgrey;
   transition: all 200ms ease-in;
-  border-radius: .65em;
+  border-radius: 0.65em;
 }
 
 .signup:hover {
@@ -115,7 +111,6 @@ code {
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
@@ -126,31 +121,29 @@ code {
   font-size: 17px;
 }
 
-/* Add an active class to highlight the current page */
-.active {
-  background-color: #4CAF50;
-  color:rgb(14, 13, 13);
+.topnav:active {
+  background-color: #4caf50;
+  color: rgb(14, 13, 13);
 }
 .topnav a:hover {
-  background-color:  rgb(18, 179, 152);
+  background-color: rgb(18, 179, 152);
   color: rgb(252, 240, 240);
 }
 .notification {
   color: rgb(20, 20, 20);
   width: 6em;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-weight: 100;
   font-size: 1.75em;
-  border: 1px solid rgba(255, 255, 255, .75);
+  border: 1px solid rgba(255, 255, 255, 0.75);
   background: lightgrey;
   transition: all 200ms ease-in;
-  border-radius: .65em;
+  border-radius: 0.65em;
 }
-  .notification:hover {
-    background-color: rgb(18, 179, 152);
-    color: black;
-    border: none;
-
+.notification:hover {
+  background-color: rgb(18, 179, 152);
+  color: black;
+  border: none;
 }
 .posting {
   float: center;
@@ -161,7 +154,4 @@ code {
   text-decoration: none;
   font-size: 17px;
   width: 80vw;
-
-  }
-  
-
+}
